--- a/angular.json
+++ b/angular.json
@@ -69,6 +69,14 @@
                   "with": "src/environments/environment.development.ts"
                 }
               ]
+            },
+            "qa": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.qa.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -81,6 +89,9 @@
             },
             "development": {
               "buildTarget": "angular-ecommerce:build:development"
+            },
+            "qa": {
+              "buildTarget": "angular-ecommerce:build:qa"
             }
           },
           "defaultConfiguration": "development"
