--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@okta/okta-signin-widget": "^6.2.0",
     "bootstrap": "^5.2.0",
     "rxjs": "~7.8.0",
+    "stripe": "^8.179.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
