--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@okta/okta-angular": "^6.0.0",
     "@okta/okta-auth-js": "^6.4.0",
     "@okta/okta-signin-widget": "^6.2.0",
+    "@stripe/stripe-js": "^1.44.1",
     "bootstrap": "^5.2.0",
     "rxjs": "~7.8.0",
     "stripe": "^8.179.0",
